--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,12 @@
 		<style>
 			html {
 				background-color: #292929;
-				color: #CEC8BB
+				color: #CEC8BB;
+				margin: 0;
+				padding: 0;
+			  }
+			  body {
+				margin: 0;
 			  }
 		</style>
 		<meta charset="utf-8" />
@@ -13,6 +18,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div style="display: contents;">%sveltekit.body%</div>
 	</body>
 </html>
